--- a/demo/demo.css
+++ b/demo/demo.css
@@ -35,6 +35,7 @@ footer {
 footer ul {
     display: flex;
     justify-content: center;
+    padding-left: 0;
 }
 footer li {
     list-style: none;
@@ -92,4 +93,21 @@ h2 {
 .demo-type a:hover {
     color: #ff5a60;
     text-decoration: underline;
+}
+
+
+
+/* PUSH
+   ========================================================================== */
+.togglemenu--push .nav-item a {
+    font-size: 1.5em;
+    font-weight: bold;
+    text-decoration: none;
+}
+.togglemenu--push .l-accordion > .nav-menu > .nav-item > a {
+    font-weight: normal;
+}
+.togglemenu--push .l-panel .item-back .item-title {
+    font-size: 1.4em;
+    font-weight: bold;
 }
